--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,6 +13,9 @@ on:
     branches:
     - main
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,7 +25,7 @@ jobs:
       - uses: actions/checkout@v3
       
       # Generate the snake game from GitHub contribution grid
-      - uses: Platane/snk@v3
+      - uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
@@ -31,7 +34,7 @@ jobs:
       
       # Push the generated files to the output branch
       - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
           build_dir: dist
